logs/xstools.log
Listing '.'...
Listing './bin'...
Compiling './bin/bin2hex.py'...
Compiling './bin/hex2bin.py'...
Compiling './bin/hex2dump.py'...
Compiling './bin/hexdiff.py'...
Compiling './bin/hexinfo.py'...
Compiling './bin/hexmerge.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pypubsub-4.0.0.dist-info'...
Listing './lib/python3.5/site-packages/XsTools-0.1.31.egg-info'...
Listing './lib/python3.5/site-packages/bitstring-3.1.5.egg-info'...
Listing './lib/python3.5/site-packages/intelhex'...
Listing './lib/python3.5/site-packages/intelhex-2.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pubsub'...
Listing './lib/python3.5/site-packages/pubsub/core'...
Listing './lib/python3.5/site-packages/pubsub/utils'...
Listing './lib/python3.5/site-packages/pyusb-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/usb'...
Listing './lib/python3.5/site-packages/usb/backend'...
Listing './lib/python3.5/site-packages/xstools'...
Compiling './lib/python3.5/site-packages/xstools/flashdev.py'...
***   File "./lib/python3.5/site-packages/xstools/flashdev.py", line 237
    print '%x %x' % (mfg_id, jedec_id)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xstools/icons'...
Listing './lib/python3.5/site-packages/xstools/test'...
Compiling './lib/python3.5/site-packages/xstools/usb2serial.py'...
***   File "./lib/python3.5/site-packages/xstools/usb2serial.py", line 68
    print "Serial port = ", sercomm.name
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xstools/xilfpga.py'...
***   File "./lib/python3.5/site-packages/xstools/xilfpga.py", line 424
    print fpga.get_idcode()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xsbitarray.py'...
***   File "./lib/python3.5/site-packages/xstools/xsbitarray.py", line 155
    print a, b, c
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xstools/xsboard.py'...
***   File "./lib/python3.5/site-packages/xstools/xsboard.py", line 461
    print repr(board_info)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xscomm.py'...
***   File "./lib/python3.5/site-packages/xstools/xscomm.py", line 81
    print "available = %d  waiting = %d" % (self.get_send_buffer_space(), self.get_recv_buffer_length())
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xsdutio.py'...
***   File "./lib/python3.5/site-packages/xstools/xsdutio.py", line 218
    print '%3d - %3d = %4d' % (minuend, subtrahend, diff.int),
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xserror.py'...
***   File "./lib/python3.5/site-packages/xstools/xserror.py", line 34
    print 'ERROR: %s' % args[0]
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xstools/xsflags.py'...
***   File "./lib/python3.5/site-packages/xstools/xsflags.py", line 116
    print 'Auxiliary JTAG port is ' + (
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xsi2c.py'...
***   File "./lib/python3.5/site-packages/xstools/xsi2c.py", line 226
    print i2c.rd_reg(0x0e)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xsjtag.py'...
***   File "./lib/python3.5/site-packages/xstools/xsjtag.py", line 326
    print '#XSUSB = %d' % XsUsb.get_num_xsusb()
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xsload.py'...
***   File "./lib/python3.5/site-packages/xstools/xsload.py", line 118
    print "Success: Data in address range [{bottom},{top}] of serial flash on {board} uploaded to {file}!".format(
                                                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xsmemio.py'...
***   File "./lib/python3.5/site-packages/xstools/xsmemio.py", line 225
    print """
    ##################################################################
    # Get some random numbers from the RNG in the XuLA FPGA.
    ##################################################################
    """
             
                                                                      
                                                            
                                                                      
      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xstools/xsspi.py'...
***   File "./lib/python3.5/site-packages/xstools/xsspi.py", line 103
    print spi._memio._get_mem_widths()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xstools/xstest.py'...
***   File "./lib/python3.5/site-packages/xstools/xstest.py", line 104
    print "Success:", xs_board.name, "passed diagnostic test!"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xstools/xsusb.py'...
***   File "./lib/python3.5/site-packages/xstools/xsusb.py", line 294
    print 'Please disconnect your XESS board ...',
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xstools/xsusbprg.py'...
***   File "./lib/python3.5/site-packages/xstools/xsusbprg.py", line 110
    print 'Verifying microcontroller firmware against %s.' % args.filename
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xstools/xula'...
Listing './lib/python3.5/site-packages/xstools/xula2'...
Listing './share'...
Listing './share/python-wheels'...
